# ossim-csm-plugin

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  sonar-project.properties
scripts/: Jenkinsfile  buildNative.sh
src/: CMakeLists.txt  VTSMisc.h  ossimCsm3Config.h.in  ossimCsm3Loader.cpp  ossimCsm3Loader.h  ossimCsm3PluginInit.cpp  ossimCsm3ProjectionFactory.cpp  ossimCsm3ProjectionFactory.h  ossimCsm3SensorModel.cpp  ossimCsm3SensorModel.h  ossimCsmConfig.h.in  ossimCsmLoader.cpp  ossimCsmLoader.h  ossimCsmPluginInit.cpp  ossimCsmProjectionFactory.cpp  ossimCsmProjectionFactory.h  ossimCsmSensorModel.cpp  ossimCsmSensorModel.h  vts_isd.cpp
test/: CMakeLists.txt
